--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@
 
 title: Human, Not A Slave
 email:
-webmaster: Aaron Aiken
-webmaster-url: https://amaiken.com/pages/about
+webmaster: 
+webmaster-url: 
 description: >- # this means to ignore newlines until "baseurl:"
   
 baseurl: "" # the subpath of your site, e.g. /blog
